# greentic-provision

./: Cargo.toml  README.md
.codex/: GPROV-PR-01.md  GPROV-PR-02.md  GPROV-PR-03.md  GPROV-PR-04.md  global_rules.md  repo_overview.md
.github/workflows/: ci.yml  nightly-conformance.yml  release.yml
ci/: local_check.sh
crates/greentic-provision-cli/: Cargo.toml
crates/greentic-provision-cli/src/: main.rs
crates/greentic-provision-cli/tests/: cli_smoke.rs
crates/greentic-provision-core/: Cargo.toml
crates/greentic-provision-core/src/: apply.rs  discovery.rs  engine.rs  executor.rs  lib.rs  types.rs
crates/greentic-provision-core/tests/: wasmtime_executor.rs
docs/: architecture.md
tests/fixtures/: build_fixtures.sh
tests/fixtures/pack_src/noop-provision/: pack.json
tests/fixtures/pack_src/noop-provision/components/: setup_default__collect.wat  setup_default__summary.wat  setup_default__validate.wat
tests/fixtures/packs/noop-provision.gtpack/components/: setup_default__apply.wat
tests/gtests/: README
